--- a/samples/tokenCredentialSamples/ClientCredentialFlow/package.json
+++ b/samples/tokenCredentialSamples/ClientCredentialFlow/package.json
@@ -6,9 +6,9 @@
 		"start": "npm install && npx ts-node typeScript/index.ts"
 	},
 	"dependencies": {
-		"@azure/identity": "^1.2.0",
-		"ts-node": "^9.0.0",
-		"typescript": "^4.0.5",
-		"@microsoft/microsoft-graph-client": "file:../../../"
+		"@azure/identity": "^1.3.0",
+		"@microsoft/microsoft-graph-client": "file:../../../",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.4"
 	}
 }
